--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </div>
     <!--</content>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.highcharts.com/highcharts.src.js"></script>
     <script src="./assets/main.js"></script>
   </body>
 </html>
