adding placeholder for chart

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         1DGB = <span id="dollar"></span>
       </div>
     </div>
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center add-pad">
       <div class="row">
         <div class="row col-md-12 text-center stats">
           <div id="percent-change">
@@ -30,7 +30,12 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid text-center footer">
+    <div class="container-fluid text-center add-pad">
+      <div class="row col-md-12 text-center">
+        CHART
+      </div>
+    </div>
+    <div class="container-fluid text-center footer add-pad">
       <div class="copyright col-md-6">
         <span>&copy;2017 Dayne Sohn
       </div>
