--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
           </div>
           <div class="stat">
             <div class="stat-title">
-              <span>Lowest Price</span>
+              <span>Lowest 24h Price</span>
             </div>
             <div id="low-price">
             </div>
           </div>
           <div class="stat">
             <div class="stat-title">
-              <span>Highest Price</span>
+              <span>Highest 24h Price</span>
             </div>
             <div id="high-price">
             </div>
@@ -56,7 +56,6 @@
     <div class="container-fluid text-center add-pad">
       <div class="row col-md-12 text-center">
         C H A R T
-        <!--<canvas id="myChart" width="100" height="100"></canvas>-->
       </div>
     </div>
     <div class="container-fluid text-center footer add-pad">
