--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div class="container-fluid text-center add-pad">
       <div class="row col-md-12 text-center">
         C H A R T
+        <canvas id="myLineChart" width="740" height="200"></canvas>
       </div>
     </div>
     <div class="container-fluid text-center footer add-pad">
