--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="nav navbar navbar-fixed-top">
       <div class="nav navbar-left">
-        <span class="title" id="click-me"><a href="#">DIGIPRICE</a></span>
+        <span class="title"><a href="#">DIGIPRICE</a></span>
       </div>
       <div class="nav navbar-nav navbar-right">
         <ul class="nav navbar-nav nav-pills links">
@@ -30,28 +30,28 @@
     <div class="container-fluid text-center add-pad">
       <div class="row">
         <div class="row col-md-12 text-center stats">
-          <div class="stat">
+          <div class="stat col-xs-6">
             <div class="stat-title">
               <span>Percent Change</span>
             </div>
             <div id="percent-change">
             </div>
           </div>
-          <div class="stat">
+          <div class="stat col-xs-6">
             <div class="stat-title">
               <span>Coin Rank</span>
             </div>
             <div id="coin-rank">
             </div>
           </div>
-          <div class="stat">
+          <div class="stat col-xs-6">
             <div class="stat-title">
               <span>Lowest 24h Price</span>
             </div>
             <div id="low-price">
             </div>
           </div>
-          <div class="stat">
+          <div class="stat col-xs-6">
             <div class="stat-title">
               <span>Highest 24h Price</span>
             </div>
@@ -63,11 +63,11 @@
     </div>
     <div class="container-fluid text-center add-pad">
       <div class="row col-md-12 text-center chart-section">
-        <span>DigiByte price in USD over the last 35 days</span>
+        <span class="chart-title">DigiByte price in USD over the last 21 days</span>
         <canvas id="myLineChart" width="740" height="200"></canvas>
       </div>
     </div>
-    <div class="container-fluid text-center footer add-pad">
+    <div class="footer">
       <div class="copyright col-md-6">
         <span>&copy;2017 <a href="http://daynesohn.com" target="_blank">Dayne Sohn</a></span>
       </div>
