editing bootstrap column sizes

--- a/index.html
+++ b/index.html
@@ -29,29 +29,29 @@
     </div>
     <div class="container-fluid text-center add-pad">
       <div class="row">
-        <div class="row col-md-12 text-center stats">
-          <div class="stat col-xs-6">
+        <div class="row col-md-12 text-center stats clearfix">
+          <div class="stat col-xs-12">
             <div class="stat-title">
               <span>Percent Change</span>
             </div>
             <div id="percent-change">
             </div>
           </div>
-          <div class="stat col-xs-6">
+          <div class="stat col-xs-12">
             <div class="stat-title">
               <span>Coin Rank</span>
             </div>
             <div id="coin-rank">
             </div>
           </div>
-          <div class="stat col-xs-6">
+          <div class="stat col-xs-12">
             <div class="stat-title">
               <span>Lowest 24h Price</span>
             </div>
             <div id="low-price">
             </div>
           </div>
-          <div class="stat col-xs-6">
+          <div class="stat col-xs-12">
             <div class="stat-title">
               <span>Highest 24h Price</span>
             </div>
