--- a/about.html
+++ b/about.html
@@ -27,11 +27,11 @@
         <span class="about-title">ABOUT DIGIPRICE</span>
         <span class="about-text">DigiPrice is a personal project that was created with inspiration from <a href="http://ethereumprice.org" target="_blank">ethereumprice.org</a>. I’ve been learning JavaScript over the past few months and have been looking for ways to test my knowledge while building something cool and personally interesting to me. My friends and I recently invested in DGB and I wasn’t happy with the options for quickly checking the rate of the cryptocurrency, so I decided to build one. My goal was to create an easily accessible snapshot of the DigiByte currency that was not only functional, but also aesthetically pleasing.</span>
         <br />
-        <span class="about-text">This is my first time working with APIs and manipulating data in this way. Learning how to feed this into <a href="http://chartjs.org" target="_blank">Chart.js</a> was both frustrating and rewarding. The data in the chart is pulled from Poloniex and calculated by using each day's "opening" and "closing" prices. An average of these is taken and then multiplied by the current Bitcoin value in order to get the value in USD. This is also my first time working with the UNIX timestamp. I used <a href="http://momentjs.com/" target="_blank">Moment.js</a> to convert these into the MMM Do YYYY format you see on the X axis of the chart.</span>
+        <span class="about-text">This is my first time working with APIs and manipulating data in this way. Learning how to feed this into <a href="http://chartjs.org" target="_blank">Chart.js</a> was both frustrating and rewarding. The data in the chart is pulled from Poloniex and calculated by using each day's "opening" and "closing" prices. An average of these is taken and then multiplied by the current Bitcoin value in order to get the value in USD. This is also my first time working with the UNIX timestamp. I used <a href="http://momentjs.com/" target="_blank">Moment.js</a> to convert these into the "MMM Do YYYY" format you see on the X axis of the chart.</span>
         <br />
         <span class="about-text">Overall I've had a blast working on this and hope to continue finding new things to add or improve upon. I hope others enjoy using it as much as I have enjoyed building it.</span>
         <br /><br />
-        <span class="about-text-left">-Dayne&nbsp;</span>
+        <span class="about-text">-Dayne&nbsp;</span>
       </div>
     </div>
     <div class="footer f-a add-pad">
@@ -46,7 +46,6 @@
     <script>
       $(document).ready(function() {
         $('.about').hide().fadeIn(1000);
-        $('')
       })
     </script>
   </body>
