--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       <div class="nav navbar-nav navbar-right">
         <ul class="nav navbar-nav nav-pills links">
           <li class="active"><a href="#">About</a></li>
-          <li><a href="mailto:dayne@daynesohn.com">Contact</a></li>
+          <li><a href="mailto:dayne@digiprice.io">Contact</a></li>
         </ul>
       </div>
     </nav>
