resizing for mobile/fixing blank space on iPhone

--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
             <div class="stat-title">
               <span>Percent Change</span>
             </div>
-            <div id="percent-change">
+            <div id="percent-change" class="stat-data">
             </div>
           </div>
           <div class="stat col-xs-12">
             <div class="stat-title">
               <span>Coin Rank</span>
             </div>
-            <div id="coin-rank">
+            <div id="coin-rank" class="stat-data">
             </div>
           </div>
           <div class="stat col-xs-12">
             <div class="stat-title">
               <span>Lowest 24h Price</span>
             </div>
-            <div id="low-price">
+            <div id="low-price" class="stat-data">
             </div>
           </div>
           <div class="stat col-xs-12">
             <div class="stat-title">
               <span>Highest 24h Price</span>
             </div>
-            <div id="high-price">
+            <div id="high-price" class="stat-data">
             </div>
           </div>
         </div>
