allowing chart.js to resize depending upon detected screen width at load

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <div class="container-fluid text-center add-pad">
       <div class="row col-md-12 text-center chart-section">
         <span class="chart-title">DigiByte price in USD over the last 21 days</span>
+      </div>
+      <div class="row col-md-12 text-center chart-replace">
         <canvas id="myLineChart" width="740" height="200"></canvas>
       </div>
     </div>
