--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
         </ul>
       </div>
     </nav>
-    <div class="container-fluid top-container about-container">
-      <div class="row col-md-12 about">
+    <div class="container top-container about-container">
+      <div class="row about">
         <span class="about-title">ABOUT DIGIPRICE</span>
         <span class="about-text">DigiPrice is a personal project that was created with inspiration from <a href="http://ethereumprice.org" target="_blank">ethereumprice.org</a>. I’ve been learning JavaScript over the past few months and have been looking for ways to test my knowledge while building something cool and personally interesting to me. My friends and I recently invested in DGB and I wasn’t happy with the options for quickly checking the rate of the cryptocurrency, so I decided to build one. My goal was to create an easily accessible snapshot of the DigiByte currency that was not only functional, but also aesthetically pleasing.</span>
         <br />
