adjusting timespan dropdown on mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li class="wrench">
             <div class="dropdown">
               <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-wrench" id="hide-mobile" aria-hidden="true"></span>
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu" id="userTimeSelected" aria-labelledby="dropdownMenu1">
