--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu" id="userTimeSelected" aria-labelledby="dropdownMenu1">
-                <li><a href="#" id="1hr">1 Hour</a></li>
-                <li><a href="#" id="24hr">24 Hours</a></li>
+                <li><a href="#" id="1hr">1 hour</a></li>
+                <li><a href="#" id="24hr">24 hours</a></li>
                 <li><a href="#" id="7d">7 days</a></li>
+                <li role="separator" class="divider"></li>
+                <li><input id="DGBinput" type="number"></input></li>
+                <li><a href="#"><button class="btn btn-default convert">How rich am I?</button></a></li>
               </ul>
             </div>
           </li>
@@ -37,7 +40,7 @@
     </nav>
     <div class="container-fluid top-container">
       <div class="row col-md-12 current-price text-center">
-        1DGB = <span id="dollar"></span>
+        <span class="userDGB">1</span>DGB = <span id="dollar"></span>
       </div>
     </div>
     <div class="container-fluid text-center add-pad">
