--- a/index.html
+++ b/index.html
@@ -19,12 +19,28 @@
         <ul class="nav navbar-nav nav-pills links">
           <li><a href="./about.html">About</a></li>
           <li><a href="mailto:dayne@digiprice.io">Contact</a></li>
+          <li class="wrench">
+            <div class="dropdown">
+              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <span class="glyphicon glyphicon-wrench" id="hide-mobile" aria-hidden="true"></span>
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" id="userTimeSelected" aria-labelledby="dropdownMenu1">
+                <li><a href="#" id="1hr">1 hour</a></li>
+                <li><a href="#" id="24hr">24 hours</a></li>
+                <li><a href="#" id="7d">7 days</a></li>
+                <li role="separator" class="divider"></li>
+                <li><input id="DGBinput" type="number"></input></li>
+                <li><a href="#"><button class="btn btn-default convert">How rich am I?</button></a></li>
+              </ul>
+            </div>
+          </li>
         </ul>
       </div>
     </nav>
     <div class="container-fluid top-container">
       <div class="row col-md-12 current-price text-center">
-        1DGB = <span id="dollar"></span>
+        <span class="userDGB">1</span>DGB = <span id="dollar"></span>
       </div>
     </div>
     <div class="container-fluid text-center add-pad">
@@ -78,6 +94,7 @@
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="./js/main.js"></script>
