--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>DigiPrice / About</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/reset.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -18,6 +19,8 @@
       <div class="nav navbar-nav navbar-right">
         <ul class="nav navbar-nav nav-pills links">
           <li class="active"><a href="#">About</a></li>
+          <li><a tabindex="0" id="donate" class="btn btn-default" data-trigger="focus" data-placement="bottom" title="Thank you for donating!" data-content="DigiByte address:
+            DK1hdi8JPorW5Xnyz5xR9TpmFhrCp4UvNe">Donate</a></li>
           <li><a href="mailto:dayne@digiprice.io">Contact</a></li>
         </ul>
       </div>
