removing data-trigger:focus

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="nav navbar-nav navbar-right">
         <ul class="nav navbar-nav nav-pills links">
           <li><a href="./about.html">About</a></li>
-          <li><a tabindex="0" id="donate" class="btn btn-default" data-trigger="focus" data-placement="bottom" title="Thank you for donating!" data-content="DigiByte address:
+          <li><a tabindex="0" id="donate" class="btn btn-default" data-placement="bottom" title="Thank you for donating!" data-content="DigiByte address:
             DK1hdi8JPorW5Xnyz5xR9TpmFhrCp4UvNe">Donate</a></li>
           <li><a href="mailto:dayne@digiprice.io">Contact</a></li>
           <li class="wrench">
